--- a/texto.tex
+++ b/texto.tex
@@ -75,7 +75,7 @@ Engenharia da Universidade do Porto}
 \chapter{Time Stamped Tries}
 \input{tst}
 
-\chapter{Retroactive Tabling}
+\chapter{Retroactive Call Subsumption}
 \input{retroactive}
 
 \chapter{Experimental Results}
